# HorizonMCP

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
horizon_mcp/: __init__.py  server.py
horizon_mcp/core/: config.py  pdx.py
horizon_mcp/docs/: gotchas.md
horizon_mcp/tools/: blocks.py  changed.py  events.py  gfx.py  legislation.py  lint.py  pseudo.py  tokens.py  varflow.py
