[project]
name = "horizon-mcp"
version = "0.1.0"
description = "MCP server for OTH"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
]

[project.scripts]
horizon-mcp = "horizon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horizon_mcp"]
